--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemon": "^3.1.7",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-dev-server": "^5.1.0",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "dependencies": {
     "axios": "^1.7.7",
